--- a/rules/_colors.scss
+++ b/rules/_colors.scss
@@ -1,34 +1,36 @@
-/* All color variables, including third parties like pantone and flat ui */ 
+/* All color variables, including third parties like pantone and flat ui */
 
 // Brand colors
-$ikeGray                : #252525;
-$smoothGray             : #231f20;
-
-// Colors
 
 
+// Vips custom colors
+$ike-gray               : #252525;
+$smooth-gray            : #231f20;
+
+
+// Color Palletes
 // Flat ui colors
-$turquoise              : #1abc9c; 
-$emerland               : #2ecc71; 
-$peterriver             : #3498db; 
-$amethyst               : #9b59b6; 
-$wetasphalt             : #34495e; 
-$greensea               : #16a085; 
-$nephritis              : #27ae60; 
-$belizehole             : #2980b9; 
-$wisteria               : #8e44ad; 
-$midnightblue           : #2c3e50; 
-$sunflower              : #f1c40f; 
-$carrot                 : #e67e22; 
-$alizarin               : #e74c3c; 
+$turquoise              : #1abc9c;
+$emerland               : #2ecc71;
+$peterriver             : #3498db;
+$amethyst               : #9b59b6;
+$wetasphalt             : #34495e;
+$greensea               : #16a085;
+$nephritis              : #27ae60;
+$belizehole             : #2980b9;
+$wisteria               : #8e44ad;
+$midnightblue           : #2c3e50;
+$sunflower              : #f1c40f;
+$carrot                 : #e67e22;
+$alizarin               : #e74c3c;
 $clouds                 : #ecf0f1;
-$concrete               : #95a5a6; 
-$orange                 : #f39c12; 
-$pumpkin                : #d35400; 
-$pomegranate            : #c0392b; 
-$silver                 : #bdc3c7; 
-$asbestos               : #7f8c8d; 
-
+$concrete               : #95a5a6;
+$orange                 : #f39c12;
+$pumpkin                : #d35400;
+$pomegranate            : #c0392b;
+$silver                 : #bdc3c7;
+$asbestos               : #7f8c8d;
+$radical                : #f62459;
 
 
 // Pantone Colors
