--- a/elements/_elements.scss
+++ b/elements/_elements.scss
@@ -1,16 +1,4 @@
-/* Elements are specific, reusable elements such as headers or footers */ 
-
-// -- Inputs 
-@import "inputs";
-
-// -- Buttons
-@import "buttons";
-
-// -- Siteheader
-@import "siteheader";
-
-// -- Sitefooter
-@import "sitefooter";
-
-// -- Avatars
-@import "avatars";
+/*
+* Elements
+* Elements are specific elements that are view-agnostic and reusable anywhere
+*/
