--- a/templates/adaptive/content/_content.scss
+++ b/templates/adaptive/content/_content.scss
@@ -1,38 +1,40 @@
 /* Adaptive content */
-div.adaptive, main.adaptive, article.adaptive {
-    width: 100%;
-    display: flex;
+div.adaptive,
+main.adaptive,
+article.adaptive {
+  width: 100%;
+  display: flex;
+  overflow: hidden;
+  position: relative;
+  min-height: 100vh;
+
+  // Variations
+  &.fullscreen {
+    height: 100vh;
     overflow: hidden;
-    position: relative;
-    min-height: 100vh;
+  }
 
-    // Variations
-    &.fullscreen { 
-        height: 100vh;
-        overflow: hidden;
-    }
-
-    &.space-top, .space-top { 
-        @media #{$desktop} {
-            padding-top: $desktopAdaptiveTop;
-            min-height: calc(100vh - #{$desktopAdaptiveTop});
-        }
-    }
-
-    // Responsive rules 
-    // -- Mobile 
-    @media #{$mobile} {
-        flex-direction: column;    
-        @import "mobile"; 
-    }
-
-    // -- Desktop
+  &.space-top,
+  .space-top {
     @media #{$desktop} {
-        flex-flow: row wrap;
-        @import "desktop";
+      padding-top: $desktopAdaptiveTop;
+      min-height: calc(100vh - #{$desktopAdaptiveTop});
     }
-    
+  }
 
-    // Navbar 
-    @import "navbar/navbar";
+  // Responsive rules
+  // -- Mobile
+  @media #{$mobile} {
+    flex-direction: column;
+    @import 'mobile';
+  }
+
+  // -- Desktop
+  @media #{$desktop} {
+    flex-flow: row wrap;
+    @import 'desktop';
+  }
+
+  // Navbar
+  @import 'navbar/navbar';
 }
