--- a/app.scss
+++ b/app.scss
@@ -1,18 +1,15 @@
 /*
-
- ______     ______     ______     ______        ______   ______     ______     ______   __  __    
-/\  ___\   /\  __ \   /\  ___\   /\  ___\      /\  == \ /\  __ \   /\  == \   /\__  _\ /\ \_\ \   
-\ \___  \  \ \  __ \  \ \___  \  \ \___  \     \ \  _-/ \ \  __ \  \ \  __<   \/_/\ \/ \ \____ \  
- \/\_____\  \ \_\ \_\  \/\_____\  \/\_____\     \ \_\    \ \_\ \_\  \ \_\ \_\    \ \_\  \/\_____\ 
-  \/_____/   \/_/\/_/   \/_____/   \/_____/      \/_/     \/_/\/_/   \/_/ /_/     \/_/   \/_____/ 
-
-
-    General SASS boilerplate by @ikethepike 2017                                                                                                  
-    * Create your own header at: http://patorjk.com/software/taag/
- 
+'########:'########:::::'###::::'####:'##:::::::'##::::'##:'########::::'###::::'########::
+... ##..:: ##.... ##:::'## ##:::. ##:: ##::::::: ##:::: ##: ##.....::::'## ##::: ##.... ##:
+::: ##:::: ##:::: ##::'##:. ##::: ##:: ##::::::: ##:::: ##: ##::::::::'##:. ##:: ##:::: ##:
+::: ##:::: ########::'##:::. ##:: ##:: ##::::::: #########: ######:::'##:::. ##: ##:::: ##:
+::: ##:::: ##.. ##::: #########:: ##:: ##::::::: ##.... ##: ##...:::: #########: ##:::: ##:
+::: ##:::: ##::. ##:: ##.... ##:: ##:: ##::::::: ##:::: ##: ##::::::: ##.... ##: ##:::: ##:
+::: ##:::: ##:::. ##: ##:::: ##:'####: ########: ##:::: ##: ########: ##:::: ##: ########::
+:::..:::::..:::::..::..:::::..::....::........::..:::::..::........::..:::::..::........:::
  */
 
-// Initialize framework
+// Initialize Trailhead
 // -- Rules
 @import 'rules/rules';
 
