--- a/rules/branding/_colors.scss
+++ b/rules/branding/_colors.scss
@@ -1,20 +1,17 @@
-/* All color variables, including third parties like pantone and flat ui */
-
 /*
 * Colors
 * This file contains all the colors used in your app
 */
 
 // Brand colors
-// Your brand colors go here
 
-// Fishbone custom colors
+// Color Palettes
+// -- Trailhead colors
 $ike-gray: #252525;
 $smooth-gray: #231f20;
 $fishbone-teal: #1c3c4c;
 
-// Color Palletes
-// Flat ui colors
+// - Flat UI colors
 $turquoise: #1abc9c;
 $emerland: #2ecc71;
 $peter-river: #3498db;
@@ -37,7 +34,7 @@ $silver: #bdc3c7;
 $asbestos: #7f8c8d;
 $radical: #f62459;
 
-// Pantone Colors
+// -- Pantone Colors
 $primrose-yellow: #f6d258;
 $pale-dogwood: #efcec5;
 $hazelwood: #d1af94;
@@ -109,8 +106,7 @@ $radiant-orchid: #ac70ae;
 $cayenne: #e0655d;
 $sand: #cfb38c;
 
-// Third party colors
-
+// -- Third party colors
 $facebook: #3b5998;
 $flickr: #fe0883;
 $foursquare: #8fd400;
