--- a/rules/scaffolding/_quick-classes.scss
+++ b/rules/scaffolding/_quick-classes.scss
@@ -12,30 +12,47 @@
 .absolute {
   position: absolute;
 }
-// -- Sticky
-.sticky {
-  position: sticky;
-}
-// -- Fixed
-.fixed {
-  position: fixed;
-}
 
 // -- Internal positionings
 .sticky,
 .fixed {
-  &.top {
-    top: 0;
-  }
-  &.bottom {
-    bottom: 0;
-  }
-  &.left {
-    left: 0;
-  }
-  &.right {
-    right: 0;
-  }
+  top: 0;
+}
+
+.sticky,
+.sticky-top,
+.sticky-bottom,
+.sticky-left,
+.sticky-right {
+  position: sticky;
+}
+
+.fixed,
+.fixed-top,
+.fixed-bottom,
+.fixed-left,
+.fixed-right {
+  position: fixed;
+}
+
+.sticky-top,
+.fixed-top {
+  top: 0;
+}
+
+.sticky-bottom,
+.fixed-bottom {
+  bottom: 0;
+}
+
+.sticky-left,
+.fixed-left {
+  left: 0;
+}
+
+.sticky-right,
+.fixed-right {
+  right: 0;
 }
 
 // Overflow
@@ -44,7 +61,7 @@
 }
 
 // Display none
-.gonzo,
+.none,
 .gone {
   display: none !important;
 }
