--- a/rules/branding/_branding.scss
+++ b/rules/branding/_branding.scss
@@ -11,13 +11,13 @@
 
 // App color palette
 // -- Background color
-$background: #1c3c4c;
+$background: $trailhead-dark-teal;
 
 // -- Default text color
 $color: #fff;
 
 // -- Highlight Color
-$highlight: $radical;
+$highlight: $trailhead-orange;
 
 // Secondary Colors
 // -- Application dim
