--- a/rules/branding/_colors.scss
+++ b/rules/branding/_colors.scss
@@ -11,6 +11,11 @@ $ike-gray: #252525;
 $smooth-gray: #231f20;
 $fishbone-teal: #1c3c4c;
 
+$trailhead-dark-teal: #04252c;
+$trailhead-orange: #f64747;
+$trailhead-yellow: #fbaf5d;
+$trailhead-light-teal: #073a45;
+
 // - Flat UI colors
 $turquoise: #1abc9c;
 $emerland: #2ecc71;
