Changes to intro

--- a/rules/branding/_branding.scss
+++ b/rules/branding/_branding.scss
@@ -11,7 +11,7 @@
 
 // App color palette
 // -- Background color
-$background: $trailhead-dark-teal;
+$background: #fff;
 
 // -- Default text color
 $color: #fff;
