--- a/rules/core/_core.scss
+++ b/rules/core/_core.scss
@@ -1,6 +1,6 @@
 /*
 * Core
-* These are the core functions, mixins and rules that powers Fishbone
+* These are the core functions, mixins and rules that powers Trailhead
 */
 
 // Initalize
