--- a/rules/core/_functions.scss
+++ b/rules/core/_functions.scss
@@ -1,6 +1,6 @@
 /*
 * Functions
-* These are add-in functions that enable Fishbone to work
+* These are add-in functions that enable Trailhead to work
 */
 
 // -- Replace in string
