--- a/rules/flow/_golden.scss
+++ b/rules/flow/_golden.scss
@@ -1,6 +1,6 @@
 /*
 * Golden rules
-* These are the golden ratio rules for Fishbone,
+* These are the golden ratio rules for Trailhead,
 * these are a sort of base-building block, entirely optional
 */
 
