--- a/rules/scaffolding/_scaffolding.scss
+++ b/rules/scaffolding/_scaffolding.scss
@@ -1,6 +1,6 @@
 /*
 * Scaffolding
-* Fishbone is designed to help you quickly build up layouts and designs,
+* Trailhead is designed to help you quickly build up layouts and designs,
 * for this we provide quick scaffolding tools, that allow you to build up
 * and try out layouts before their final implementation. Recommended to disable this 
 * in production.
