--- a/rules/branding/_colors.scss
+++ b/rules/branding/_colors.scss
@@ -124,9 +124,9 @@ $google: #c63d2d;
 $instagram: #4e433c;
 $linkedin: #4875b4;
 $tumblr: #2b4964;
-$twitter: #33ccff;
+$twitter: #3cf;
 $vimeo: #86b32d;
-$youtube: #ff3333;
+$youtube: #f33;
 $palette: (
   'teal' : $trailhead-dark-teal,
   'red' : $trailhead-orange,
