Filename tweaks and fixed slide blocks

--- a/rules/text/_text.scss
+++ b/rules/text/_text.scss
@@ -11,9 +11,9 @@ $defer-body: true;
 // Imports
 // -- Font imports
 @import 'fonts';
-// -- Headings
-@import 'headings';
-// -- Body text
+// -- Heading Texts
+@import 'heading-text';
+// -- Body texts
 @import 'body-text';
 // -- Text classes
 @import 'text-classes';
